--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,76 @@
-#header-img {
-    width: 20%;
-    height: 2em;
+body{
+    background-color: #eee;
+    font-family: 'Lato', sans-serif;
+}
+#header{
+    display: flex;
+    padding: 20px;
+}
+.image-div{
+    flex-basis: 60%;
+}
+.links-div{
+    flex-basis: 40%;
+}
+.links-div ul{
+    display: flex;
+}
+.links-div li{
+    flex-basis: 30%;
+}
 
+@media screen and (max-width: 425px){
+    #header{
+        display: block;
+    }
+    
+    #header ul{
+        text-align: center;
+        display: block;
+    }
+    #header li{
+        margin-right: 3em;
+    }
+    #header-img {
+        width: 60%;
+        height: 1em;
+    }
+}
+#header li{
+    color: #000;
+    text-decoration: none;
+    list-style: none;
+}
+#header a{
+    color: #000;
+}
+#header-img {
+    margin-left: 2em;
+    width: 40%;
+    height: 2.3em;
+}
+.form-div{
+    text-align: center;
+}
+.form-div h2{
+    font-size: 24px;
+    font-weight: bold;
+    padding: 18px;
+    text-align: center;
+}
+#email{
+    width: 21em;
+    font-size: 13px;
+    border: 1px solid rgba(32, 32, 32, 0.3);
+    padding: 3px 3px 3px 5px;
+}
+#submit{
+    font-weight: bold;
+    text-align: center;
+    margin-top: 1em;
+    width: 150px;
+    height: 30px;
+    background-color: #f0c40d;
+    border: none;
+    border-radius: 2px;
 }
