--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@ body{
 #header{
     display: flex;
     padding: 20px;
+    position: fixed;
+    top: 0;
+    background-color: #eee;
+    z-index: 1;
+
 }
 .image-div{
     flex-basis: 60%;
@@ -17,24 +22,6 @@ body{
 }
 .links-div li{
     flex-basis: 30%;
-}
-
-@media screen and (max-width: 425px){
-    #header{
-        display: block;
-    }
-    
-    #header ul{
-        text-align: center;
-        display: block;
-    }
-    #header li{
-        margin-right: 3em;
-    }
-    #header-img {
-        width: 60%;
-        height: 1em;
-    }
 }
 #header li{
     color: #000;
@@ -51,6 +38,7 @@ body{
 }
 .form-div{
     text-align: center;
+    margin-top: 5em;
 }
 .form-div h2{
     font-size: 24px;
@@ -73,4 +61,48 @@ body{
     background-color: #f0c40d;
     border: none;
     border-radius: 2px;
+}
+
+.desc{
+    margin-top: 3em;
+}
+
+.video-div{
+    text-align: center;
+}
+
+#video{
+    position: relative;
+    width: 50%;
+    margin: 2em auto;
+}
+
+@media screen and (max-width: 425px){
+    #header{
+        display: block;
+    }
+    
+    #header ul{
+        text-align: center;
+        display: block;
+    }
+    #header li{
+        margin-right: 3em;
+    }
+    #header-img {
+        width: 80%;
+        height: 2em;
+        padding: 2px 0;
+    }
+    .form-div{
+        margin-top: 9em;
+    }
+    .desc{
+        text-align: center;
+    }
+    #video{
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
 }
